--- a/src/css/index.css
+++ b/src/css/index.css
@@ -5,6 +5,7 @@
     --dark-yellow: #b3931d;
     --yellow: #ffd536;
     --black: rgb(27, 27, 27);
+    --blue-light2:rgb(1, 88, 146);
 }
 
 *{
@@ -24,7 +25,42 @@ body,
     background-color: rgb(255, 255, 255);
 }
 
-.container{   
+nav{
+    position:fixed;
+    z-index:99;
+    display:flex;
+    width:100%;
+    height: 4rem;
+    align-items: center;
+    background: var(--black);
+}
+
+nav a{
+    width:2.5rem;
+    min-height:2.5rem;
+    display:flex;
+    flex-direction:column;
+    justify-content: space-around;
+    align-items: center; 
+    margin-left: 1rem; 
+}
+
+nav a span{
+    display: flex;
+    height: .35rem;
+    width: 95%;
+    background:#fff;
+}
+
+.business{
+    width: 30%;
+    color:#fff;
+    margin-left: 1rem;
+    font-size: 1rem;
+}
+
+.container{ 
+    margin-top:4rem;
     max-width:800px;
 }
 
